--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,7 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-jpl=true
 spring.jpa.properties.hibernate.formate_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+
+
+spring.security.user.name=user
+spring.security.user.password=1234
